log/build_2021-07-10_18-39-38/stepper_motor/stderr.log
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'script-dir' will not be supported in future versions. Please use the underscore name 'script_dir' instead
  % (opt, underscore_opt))
/home/usr/.local/lib/python3.6/site-packages/setuptools/dist.py:651: UserWarning: Usage of dash-separated 'install-scripts' will not be supported in future versions. Please use the underscore name 'install_scripts' instead
  % (opt, underscore_opt))
  File "/home/usr/usr_ws_2020/install/stepper_motor/lib/python3.6/site-packages/stepper_motor/steering_node.py", line 122
    return *self.steps)round((deg/360)
           ^
SyntaxError: invalid syntax

